2001-11-01  Christoph Pfisterer  <cp@chrisp.de>

	* Mirror.pm (new_from_field): Disabled the case for leaving out
	the key in custom mirror lists; it doesn't work anyway because the
	URLs themselves also contain colons. We'll need another separator.

2001-10-27  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm (resolve_depends): Make "package not found"
	non-fatal if there are alternatives.

2001-10-20  Christoph Pfisterer  <cp@chrisp.de>

	* Engine.pm (real_install): Let the user pick one alternative when
	resolving dependencies with virtual packages.

2001-10-18  Christoph Pfisterer  <cp@chrisp.de>

	* Engine.pm (restart_as_root): Propagate the "--yes" option when
	restarting as root.

	* Services.pm (prompt, prompt_boolean, prompt_selection): Check
	the "dontask" a.k.a. "--yes" option and use the default value
	instead of prompting the user when set.

	* Config.pm: Added infrastructure to propagate command line
	options: set_options() and get_option().

	* Engine.pm (process): Be more helpful when the user entered an
	unknown command (contributed by Justin Hallett).

2001-10-17  Christoph Pfisterer  <cp@chrisp.de>

	* Mirror.pm: New class that handles both named and package-local
	mirror site lists. Retrying is handled more intelligently.
	* NetAccess.pm: Another major overhaul. Handling of mirrors has
	been moved to the new Mirror class. That greatly simplified the
	fetch_url_to_file routine.
	* PkgVersion.pm: Use the new Mirror class to handle package-local
	mirrors. The mirror list is parsed on the fly when it is needed.

	* Engine.pm (process): Added a "this command needs root
	privileges" flag. Minor restructuring.
	(restart_as_root): New function which re-executes fink as root,
	passing the current command. Now knows about su if configured.

	* FinkVersion.pm.in: Made independent of Fink::Config. The
	installation path is now hardcoded during installation, like with
	fink.in.

2001-10-14  Christoph Pfisterer  <cp@chrisp.de>
